# pysnow

./: .coveralls.yml  .gitignore  .travis.yml  LICENSE  README.md  README.rst  pyproject.toml  pysnow.py  requirements.txt  setup.py
docs/: Makefile  client.rst  conf.py  examples.rst  general.rst  index.rst  oauth_client.rst  query.rst  request.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  (+1 more)
docs/api/: attachment.rst  client.rst  exceptions.rst  oauth_client.rst  params_builder.rst  query_builder.rst  resource.rst  response.rst
docs/examples/: create.rst  query_builder.rst  update.rst
docs/full_examples/: attachments.rst  create.rst  delete.rst  fetch.rst  filtering.rst  oauth_client.rst  query_builder.rst  retry.rst  sorting.rst  threads.rst  update.rst
docs/usage/: client.rst  index.rst  parameters.rst  query.rst  request.rst  resource.rst
pysnow/: __init__.py  attachment.py  client.py  criterion.py  enums.py  exceptions.py  legacy_exceptions.py  legacy_request.py  oauth_client.py  params_builder.py  query.py  query_builder.py  report.py  request.py  resource.py  response.py  sysparms.py  url.py  url_builder.py
pysnow/legacy/: exceptions.py  request.py
test/: incident.py
tests/: example.txt  incident.py  test_attachment.py  test_client.py  test_criterion.py  test_incident.py  test_oauth_client.py  test_params_builder.py  test_query.py  test_query_builder.py  test_report.py  test_request.py  test_resource.py  test_sysparms.py
tests/legacy/: test_request.py
(+13 files in other folders)
