[tool.poetry]
name = "pysnow"
version = "0.7.15"
description = "ServiceNow HTTP client library"
authors = ["Robert Wikman <rbw@vault13.org>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/rbw/pysnow"

[tool.poetry.dependencies]
python = ">=2.7.*, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, <4"
requests = "^2.21.0"
oauthlib = "^3.1.0"
python-magic = "^0.4.15"
requests-oauthlib = "^1.3.0"
six = "^1.13.0"
ijson = "^2.5.1"
pytz = "^2019.3"

[tool.poetry.dev-dependencies]
twine = "^1.13"
sphinx = "^1.8.5"
nose = "^1.3.7"
httpretty = "^0.9.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
